<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>mec-framework</artifactId>
        <groupId>clarke.fyp</groupId>
        <version>1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>ie.ucd.dempsey.mecframework</groupId>
    <artifactId>ServiceNode</artifactId>

    <properties>
        <main.class>ie.ucd.dempsey.mecframework.Main</main.class>
        <java.version>13</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>clarke.fyp</groupId>
            <artifactId>Core</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>
        <dependency>
            <groupId>org.danilopianini</groupId>
            <artifactId>gson-extras</artifactId>
            <version>0.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>5.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.30</version>
        </dependency>
    </dependencies>

    <!-- Note, profiles: local, cloud and edge here -->

    <profiles>
        <profile>
            <!-- A profile for running orchestrator and nodes locally -->
            <!--            `mvn exec:java -Plocal` to run -->
            <!--            The docker image that runs on this profile is 'sample' -->
            <id>local</id>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/resources</directory>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <configuration>
                            <mainClass>${main.class}</mainClass>
                            <arguments>
                                <argument>ws://localhost:8080</argument>
                                <argument>docker.tar</argument>
                                <argument>ws://localhost:8090</argument>
                                <argument>generic-service-node</argument>
                                <argument>0</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>cloud</id>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/resources</directory>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <configuration>
                            <mainClass>${main.class}</mainClass>
                            <arguments>
                                <argument>ws://csi420-01-vm1.ucd.ie</argument>
                                <argument>docker.tar</argument>
                                <argument>ws://localhost:8090</argument>
                                <argument>cloud-node</argument>
                                <argument>1000</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>edge</id>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/resources</directory>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <configuration>
                            <mainClass>${main.class}</mainClass>
                            <arguments>
                                <argument>ws://csi420-01-vm1.ucd.ie</argument>
                                <argument>docker.tar</argument>
                                <argument>ws://localhost:8090</argument>
                                <argument>edge-node</argument>
                                <argument>200</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <!-- Plugin used to run Java programs -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <arguments>
                        <argument>ws://csi420-01-vm1.ucd.ie</argument>
                        <argument>docker.tar</argument>
                        <argument>ws://localhost:8090</argument>
                        <argument>generic-service-node</argument>
                        <argument>0</argument>
                    </arguments>
                    <systemProperties>
                        <systemProperty>
                            <key>org.slf4j.simpleLogger.defaultLogLevel</key>
                            <value>DEBUG</value>
                        </systemProperty>
                        <systemProperty>
                            <key>org.slf4j.simpleLogger.showLogName</key>
                            <value>false</value>
                        </systemProperty>
                        <systemProperty>
                            <key>org.slf4j.simpleLogger.showShortLogName</key>
                            <value>true</value>
                        </systemProperty>
                    </systemProperties>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>service.cloud.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>

                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <!-- Jar file entry point -->
                            <mainClass>service.cloud.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
